main page categories and article page

--- a/src/about.jade
+++ b/src/about.jade
@@ -6,257 +6,107 @@ html(lang='en')
 	body
 		include ./partials/navigation.jade
 
-		//-
-		.wrap
-			.bc
-				div(itemtype='http://data-vocabulary.org/Breadcrumb', itemscope='')
-					a(itemprop='url', href='/', title='Главная')
-						span(itemprop='title') Главная
-				div  » 
-				div(itemtype='http://data-vocabulary.org/Breadcrumb', itemscope='')
-					span(itemprop='title') Про BONO
-			.tophr
-			.main.wide-l
-				h1#page-tit Про BONO
-				.main-container
-					font(color='#ff0000', size='5') - 
-					b(style='font-size: large; color: rgb(0, 84, 165);') ПРОЕКТ «#ProBono»
-					font(size='4')  
-					div
-						font(size='4')
-							br
-						img(src='http://justicon.ua/upload/medialibrary/3c5/probono-news.jpg', title='probono-news.jpg', border='0', alt='probono-news.jpg', width='735', height='403', align='middle')
-						br
-						br
-						span(style='color: rgb(255, 0, 0); font-size: x-large;') - 
-						font(size='4')
-							b
-								font(color='#0054a5') КОНЦЕПЦИЯ ПРОЕКТА
-						br
-						div(style='text-align: justify;')
-							| Проект "#Probono" обеспечивает возможность гражданам Украины получить юридическую помощь бесплатно или за минимальное вознаграждение.
-						div(style='text-align: justify;')
-							br
-						div
-							div(style='text-align: justify;')
-								| Под юридической помощью разумеется юридическая консультация, помощь в подготовке процессуальных и других правовых документов, представительство интересов в судах, с целью защиты прав и свобод человека, их восстановления в случае нарушения.
-							div(style='text-align: justify;')
-								br
-						div
-							div(style='text-align: justify;')
-								| Проект «#ProBono» принадлежит юридической компании «Юстикон», является внутрифирменным проектом. К проекту могут быть привлечены исключительно адвокаты или юристы – сотрудники компании «Юстикон», и лица, подавшие заявку на участие в проекте.
-							div(style='text-align: justify;')
-								br
-						div
-							div(style='text-align: justify;')
-								| В проект «#ProBono» не входит другая деятельность, не связанная с непосредственным применением навыков адвокатов компании.
-							div(style='text-align: justify;')
-								br
-							span(style='color: rgb(255, 0, 0); font-size: x-large;') - 
-							font(size='4')
-								b
-									font(color='#0054a5') УСЛОВИЯ ПРОЕКТА
-							br
-							div(style='text-align: justify;')
-								font(color='#0054a5')
-									| 1.
-									b  
-								| Для участия в проекте необходимо подать заявку, предоставить копии документов, связанных с делом. Заявка должна быть заполнена от руки и подписанная заявителем с указанием даты и электронной почты.
-							div(style='text-align: justify;')
-								font(color='#0054a5') 2. 
-								| Прием заявок осуществляется исключительно по почте, через службы доставки или по электронной почте.
-							div(style='text-align: justify;')
-								font(color='#0054a5') 3. 
-								| Заявитель является ответственным лицом за достоверность поданной информации в заявке и прилагающих документах.
-							div(style='text-align: justify;')
-								font(color='#0054a5') 4. 
-								| В течение 10 дней со дня получения все заявки рассматриваются и оцениваются компанией.
-							div(style='text-align: justify;')
-								font(color='#0054a5') 5. 
-								| Компания не уточняет причины недопущения заявки к проекту.
-							div(style='text-align: justify;')
-								font(color='#0054a5') 6. 
-								| В случае если один заявитель направил более, чем 1 заявку, компания рассматривает все заявки с момента их получения.
-							font(color='#0054a5') 7. 
-							| В случае если один заявитель подал более, чем 1 заявку по одному вопросу, компания оценивает и допускает к проекту последнюю по дате получения заявку. 
-							br
-							div(style='text-align: justify;')
-								font(color='#0054a5') 8.
-								|  Заявителю предоставляется право подавать заявки на участие в проекте «#ProBono» неограниченное количество.
-							div
-								font(color='#0054a5')
-									font(color='#0054a5') 9. 
-								| Компания гарантирует сохранение конфиденциальности данных о заявителе и информации о судебных делах.
-							div(style='text-align: justify;')
-								| 10. При рассмотрении заявок компания оставляет право за собой осуществлять проверку изложенных обстоятельств.
-							div
-								font(color='#0054a5')
-									font(color='#0054a5') 11. 
-								| Компания гарантирует отсутствие привилегий или ограничений к лицам по признакам расы, цвета кожи, политических, религиозных или других убеждений, пола, социального происхождения, по языковым или другим признакам.
-							div
-								font(color='#0054a5')
-									font(color='#0054a5') 12.
-								| Компания не несет ответственность за заявки, что по независимым от компании причинам не были доставлены почтой или службой доставки.
-							font(color='#0054a5') 13.
-							|  После рассмотрения заявки, компания принимает решение о допуске заявки к проекту и закрепляет за делом адвоката/юриста компании 
-							b «ЮСТИКОН».
-							br
-							div
-								font(color='#0054a5') 14.
-								|  Компания оставляет за собой право не уточнять причины замены адвоката/юриста.
-							div
-								font(color='#0054a5')
-									font(color='#0054a5') 15.
-								| Компания сообщает заявителю о результате рассмотрения каждой заявки по электронной почте.
-							div
-								font(color='#0054a5')
-									font(color='#0054a5') 16.
-								| Адвокаты/юристы проекта «#ProBono» ведут переговоры по заявке только с заявителем или представителем от имени заявителя.
-							div(style='text-align: justify;')
-								font(color='#0054a5')
-									font(color='#0054a5') 17.
-								| Заявка без указания местожительства, электронной почты, не подписанная автором признается анонимной и рассмотрению не подлежит.
-							br
-							span(style='color: rgb(255, 0, 0); font-size: x-large;') - 
-							font(size='4')
-								font(color='#0054a5')
-									b КТО ИМЕЕТ ПРАВО ПОДАТЬ ЗАЯВКУ?
-							br
-							b Подать заявку на участие в проекте «#ProBono» имеют право:
-							br
-							font(color='#0054a5') 1. 
-							| Физические лица, достигшие совершеннолетие. 
-							br
-							font(color='#0054a5') 2. 
-							| Юридические лица. 
-							br
-							br
-							b От заявителя требуется:
-							br
-							ul
-								li(style='text-align: justify;') жалоба, что относиться к одной из практик, допущенных к проекту «#ProBono»;
-								li(style='text-align: justify;')
-									| лично от руки изложить суть жалобы, заслуживающей внимание и по мнению заявителя предполагающая успешный исход, на русском или украинском языках.
-								li(style='text-align: justify;') жалоба актуальная по срокам рассмотрения. 
-							br
-							table(border='1', cellpadding='1', cellspacing='1', align='center', width='700', height='200', style='border-collapse: collapse;')
-								tbody
-									tr
-										td(colspan='3')
-											div(style='text-align: center;')
-												b
-													font(color='#0054a5')
-														br
-											div(style='text-align: center;')
-												b
-													font(color='#0054a5', size='4') СФЕРА ПРИМЕНЕНИЯ ПРОЕКТА «Pro Bono» 
-											div(style='text-align: center;')
-												b
-													font(color='#0054a5')
-														br
-									tr
-										td
-											div(style='text-align: left;')
-												b Практики, что допускаются к проекту:
-											div(style='text-align: left;')
-												b    
-												| Хозяйственные споры
-											div(style='text-align: center;')
-												span(style='text-align: left;')
-													div(style='text-align: left;')    Административные споры
-												span(style='text-align: left;')
-													div(style='text-align: left;')    Гражданские споры
-												span(style='text-align: left;')
-													div(style='text-align: left;')    Трудовые споры
-												span(style='text-align: left;')
-													div(style='text-align: left;')    Семейные споры
-												span(style='text-align: left;')
-													div(style='text-align: left;')    Наследственные споры
-												span(style='text-align: left;')
-													div(style='text-align: left;')    Земельные споры
-												span(style='text-align: left;')
-													div(style='text-align: left;')    Споры в сфере недвижимости
-												span(style='text-align: left;')
-													div(style='text-align: left;')    Налоговые споры
-												span(style='text-align: left;')
-													div(style='text-align: left;')    Возврат долгов
-												ul  
-										td
-											div(style='text-align: left;')
-												b Практики, что НЕ допускаются к проекту:
-											div(style='text-align: justify;')
-												span(style='text-align: left;')    Корпоративное право
-												br
-												span(style='text-align: left;')    Антимонопольное и конкурентное право
-												br
-												span(style='text-align: left;')    Миграционное право
-												br
-												span(style='text-align: left;')    Недвижимость, кроме споров
-												br
-												span(style='text-align: left;')    Строительство, кроме споров
-												br
-												span(style='text-align: left;')    Земельное право, кроме споров
-												ul  
-											div(style='text-align: center;')
-												br
-											div(style='text-align: center;')
-												br
-											div(style='text-align: center;')
-												br
-											div(style='text-align: center;')
-												br
-							br
-							br
-							div(style='text-align: justify;')
-								| Юридическая компания 
-								b «ЮСТИКОН»
-								|  оставляет за собой право принять в проект «#ProBono» жалобу, что не допускается к проекту, в исключительных случаях, в том числе по инвалидности, в связи с чрезвычайным материальным затруднением или риском физическому здоровью человека.
-							div(style='text-align: justify;')
-								br
-							div(style='text-align: justify;')
-								span(style='color: rgb(255, 0, 0); font-size: x-large;') -
-								span(style='color: rgb(255, 0, 0); font-size: x-large;')  
-								font(color='#0054a5', size='4')
-									b КАК ПОДАТЬ ЗАЯВКУ?
-							div(style='text-align: justify;')
-								b
-									| Компания «ЮСТИКОН» принимает заявки на участие в проекте на бумажном носителе или в электронной версии. Пожалуйста, выполните следующие действия:
-							div(style='text-align: justify;')
-								font(color='#0054a5') 1.
-								|  Распечатайте бланк заявки на участие в проекте #ProBono. *гиперссылка для скачивания*
-							div(style='text-align: justify;')
-								font(color='#0054a5') 2.
-								|  Заполните бланк заявки в полном объеме, подпишите, поставьте дату на последней странице.
-							div(style='text-align: justify;')
-								font(color='#0054a5') 3.
-								|  Прикрепите к бланку заявки копии документов, относящиеся к жалобе.
-							div(style='text-align: justify;')
-								font(color='#0054a5') 4.
-								|  Отправьте заполненную и подписанную заявку, а также все документы, или по адресу:
-							div(style='text-align: justify;') ООО «Юстикон»
-							div(style='text-align: justify;') ул. Старовокзальная, 18
-							div(style='text-align: justify;') г. Киев
-							div(style='text-align: justify;') 01032 
-							div(style='text-align: justify;')
-								font(color='#0054a5') 5.
-								|  С 17 июня в проект #ProBono допускаются заявки на электронном носителе. Отправьте отсканированные заявку и документы на электронную почту проекта probono@justicon.ua.
-							div(style='text-align: justify;')
-								br
-							div(style='text-align: justify;')
-								b Обращаем внимание на следующее:
-							div(style='text-align: justify;')
-								| После получения заявки, компании необходимо 10 (десять) рабочих дней, чтобы рассмотреть и оценить заявку с документацией. В это время запросы / обращения от Заявителей относительно результата рассмотрения не принимаются.
-							div(style='text-align: justify;')
-								br
-							div(style='text-align: justify;')
-								| В случае если полученная документация от Заявителя не соответствует требованиям проекта, заявка не рассматривается.
-							div(style='text-align: justify;')
-								br
-							div(style='text-align: justify;')
-								| В связи с большим количеством заявок, получаемых ежедневно, компания не подтверждает получение заявки и документов по телефону или по электронной почте.
-			.clear
+		section.page-label
+			.container
+				h2 Про BONO
+		section.about-page
+			.container
+				h1 ПРОЕКТ «#ProBono»
+				img(src='http://justicon.ua/upload/medialibrary/3c5/probono-news.jpg', title='probono', border='0', alt='probono-news.jpg')
+				h3 КОНЦЕПЦИЯ ПРОЕКТА
+				p Проект "#Probono" обеспечивает возможность гражданам Украины получить юридическую помощь бесплатно или за минимальное вознаграждение.
+				p Под юридической помощью разумеется юридическая консультация, помощь в подготовке процессуальных и других правовых документов, представительство интересов в судах, с целью защиты прав и свобод человека, их восстановления в случае нарушения.
+				p Проект «#ProBono» принадлежит юридической компании «Юстикон», является внутрифирменным проектом. К проекту могут быть привлечены исключительно адвокаты или юристы – сотрудники компании «Юстикон», и лица, подавшие заявку на участие в проекте.
+				p В проект «#ProBono» не входит другая деятельность, не связанная с непосредственным применением навыков адвокатов компании.
+				h3 УСЛОВИЯ ПРОЕКТА
+				ol
+					li Для участия в проекте необходимо подать заявку, предоставить копии документов, связанных с делом. Заявка должна быть заполнена от руки и подписанная заявителем с указанием даты и электронной почты.
+					li Прием заявок осуществляется исключительно по почте, через службы доставки или по электронной почте.
+					li Заявитель является ответственным лицом за достоверность поданной информации в заявке и прилагающих документах.
+					li В течение 10 дней со дня получения все заявки рассматриваются и оцениваются компанией.
+					li Компания не уточняет причины недопущения заявки к проекту.
+					li В случае если один заявитель направил более, чем 1 заявку, компания рассматривает все заявки с момента их получения.
+					li В случае если один заявитель подал более, чем 1 заявку по одному вопросу, компания оценивает и допускает к проекту последнюю по дате получения заявку. 
+					li Заявителю предоставляется право подавать заявки на участие в проекте «#ProBono» неограниченное количество.
+					li Компания гарантирует сохранение конфиденциальности данных о заявителе и информации о судебных делах.
+					li При рассмотрении заявок компания оставляет право за собой осуществлять проверку изложенных обстоятельств.
+					li Компания гарантирует отсутствие привилегий или ограничений к лицам по признакам расы, цвета кожи, политических, религиозных или других убеждений, пола, социального происхождения, по языковым или другим признакам.
+					li Компания не несет ответственность за заявки, что по независимым от компании причинам не были доставлены почтой или службой доставки.
+					li После рассмотрения заявки, компания принимает решение о допуске заявки к проекту и закрепляет за делом адвоката/юриста компании 
+						b «ЮСТИКОН».
+					li Компания оставляет за собой право не уточнять причины замены адвоката/юриста.
+					li Компания сообщает заявителю о результате рассмотрения каждой заявки по электронной почте.
+					li Адвокаты/юристы проекта «#ProBono» ведут переговоры по заявке только с заявителем или представителем от имени заявителя.
+					li Заявка без указания местожительства, электронной почты, не подписанная автором признается анонимной и рассмотрению не подлежит.
+				h3 КТО ИМЕЕТ ПРАВО ПОДАТЬ ЗАЯВКУ?
+				h4 Подать заявку на участие в проекте «#ProBono» имеют право:
+				ol
+					li Физические лица, достигшие совершеннолетие. 
+					li Юридические лица. 
+				b От заявителя требуется:
+				ul
+					li(style='text-align: justify;') жалоба, что относиться к одной из практик, допущенных к проекту «#ProBono»;
+					li(style='text-align: justify;')
+						| лично от руки изложить суть жалобы, заслуживающей внимание и по мнению заявителя предполагающая успешный исход, на русском или украинском языках.
+					li(style='text-align: justify;') жалоба актуальная по срокам рассмотрения. 
+				br
+				table
+					thead
+						tr
+							td(colspan="2")
+								span СФЕРА ПРИМЕНЕНИЯ ПРОЕКТА «Pro Bono»
+					tbody
+						tr
+							td
+								h4
+									b Практики, что допускаются к проекту:
+								p
+									| Хозяйственные споры
+								ul
+									li Административные споры
+									li Гражданские споры
+									li Трудовые споры
+									li Семейные споры
+									li Наследственные споры
+									li Земельные споры
+									li Споры в сфере недвижимости
+									li Налоговые споры
+									li Возврат долгов
+							td
+								h4 Практики, что НЕ допускаются к проекту:
+								ul
+									li Корпоративное право
+									li Антимонопольное и конкурентное право
+									li Миграционное право
+									li Недвижимость, кроме споров
+									li Строительство, кроме споров
+									li Земельное право, кроме споров
+				p
+					| Юридическая компания 
+					b «ЮСТИКОН»
+					|  оставляет за собой право принять в проект «#ProBono» жалобу, что не допускается к проекту, в исключительных случаях, в том числе по инвалидности, в связи с чрезвычайным материальным затруднением или риском физическому здоровью человека.
+				h3 КАК ПОДАТЬ ЗАЯВКУ?
+				p
+					b
+						| Компания «ЮСТИКОН» принимает заявки на участие в проекте на бумажном носителе или в электронной версии. Пожалуйста, выполните следующие действия:
+				ol
+					li Распечатайте бланк заявки на участие в проекте #ProBono. *гиперссылка для скачивания*
+					li Заполните бланк заявки в полном объеме, подпишите, поставьте дату на последней странице.
+					li Прикрепите к бланку заявки копии документов, относящиеся к жалобе.
+					li Отправьте заполненную и подписанную заявку, а также все документы, или по адресу:
+					address
+						p ООО «Юстикон» ул. Старовокзальная, 18 г. Киев 01032 
+					
+					li С 17 июня в проект #ProBono допускаются заявки на электронном носителе. Отправьте отсканированные заявку и документы на электронную почту проекта probono@justicon.ua.
+				h5 Обращаем внимание на следующее:
+				p
+					| После получения заявки, компании необходимо 10 (десять) рабочих дней, чтобы рассмотреть и оценить заявку с документацией. В это время запросы / обращения от Заявителей относительно результата рассмотрения не принимаются.
+				p
+					| В случае если полученная документация от Заявителя не соответствует требованиям проекта, заявка не рассматривается.
+				p
+					| В связи с большим количеством заявок, получаемых ежедневно, компания не подтверждает получение заявки и документов по телефону или по электронной почте.
 
-		.wrap
+		section.container
 			.consult-me-block
 				h2 Обращайтесь и мы качественно и в кратчайший срок выполним поставленные вами задачи!
 				a.btn.hot(href="#") Заказать услугу
