--- a/src/css/elements.sass
+++ b/src/css/elements.sass
@@ -35,6 +35,22 @@
 		@media (max-width: $tablet)
 			display: none
 
+.page-label
+	background: url('../img/bg/map-background-1.jpg') 50% 50% no-repeat
+	background-size: 100% 100%
+	background-size: cover
+	padding: 52px 0 63px
+	@media (max-width: $tablet)
+		padding: 18px 0 22px
+	h1, h2, h3, h4, h5, h6
+		color: #243e57
+		font-size: 36px
+		font-weight: 300
+		line-height: 1.2em
+		margin: 0
+		@media (max-width: $tablet)
+			font-size: 22px
+
 // SIDEBAR NAVIGATION
 // .navigation-sidebar .nav.nav-sidebar .submenu .inner-holder > li
 .navigation-sidebar
