--- a/src/test.jade
+++ b/src/test.jade
@@ -31,6 +31,9 @@ html(lang='en')
 								a(href="adresses.html")
 									span Адреса
 							li
+								a(href="article.html")
+									span Статья
+							li
 								a(href="kved-1.html")
 									span КВЕД 2010
 							li
