main page navigation

--- a/src/about.jade
+++ b/src/about.jade
@@ -58,8 +58,7 @@ html(lang='en')
 					tbody
 						tr
 							td
-								h4
-									b Практики, что допускаются к проекту:
+								h4 Практики, что допускаются к проекту:
 								p
 									| Хозяйственные споры
 								ul
@@ -73,7 +72,10 @@ html(lang='en')
 									li Налоговые споры
 									li Возврат долгов
 							td
-								h4 Практики, что НЕ допускаются к проекту:
+								h4 
+									| Практики, что
+									b  НЕ 
+									| допускаются к проекту:
 								ul
 									li Корпоративное право
 									li Антимонопольное и конкурентное право
