--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -517,6 +517,75 @@ body > .menu
 		display: inline-block
 		margin-right: 6px
 
+.categories-interactive
+	// display: none
+	position: relative
+	padding: 60px 0
+	@media (max-width: $tablet)
+		display: none
+	&:before
+		content: ''
+		display: block
+		background: url('../img/bg/background_3.jpg') 50% 50% no-repeat
+		background-size: cover
+		position: absolute
+		opacity: 0.5
+		left: 0
+		top: 0
+		right: 0
+		bottom: 0
+		z-index: -1
+	.categories-holder
+		font-size: 0
+		letter-spacing: 0
+		.category
+			display: inline-block
+			vertical-align: top
+			padding: 6px 20px
+			// position: relative
+			width: 33.3%
+			width: 100%
+			h3
+				font-size: 24px
+				font-weight: bold
+				line-height: 1.2em
+				// margin-bottom: 0.5em
+				position: relative
+				width: 50%
+				border-bottom: 1px solid #888
+				padding-bottom: 14px
+				&:after
+					opacity: 0
+					position: absolute
+					content: '>'
+					top: 2px
+					right: -14px
+				a
+					font-size: inherit
+					font-weight: inherit
+					line-height: inherit
+			&:last-child
+				h3
+					border: none
+			.sub-categories
+				display: none
+				position: absolute
+				left: 50%
+				top: 60px
+				padding-left: 60px
+				a
+					display: block
+					font-size: 18px
+					margin: 0 10px 10px
+					&:hover
+						text-decoration: underline
+			&:hover
+				h3
+					&:after
+						opacity: 1
+				.sub-categories
+					display: block
+
 .hero-section
 	background: url('https://unsplash.it/1600/800/?blur&image=223') 50% 50%
 	background: url('https://images.unsplash.com/photo-1431540015161-0bf868a2d407') 50% 50%
@@ -2608,3 +2677,25 @@ body > .menu
 		h4
 			margin-top: 0
 			font-size: 20px
+		b
+			color: $main-color
+		ul
+			counter-reset: aboutPageList
+			padding-left: 40px
+			margin-bottom: 30px
+			li
+				list-style: none
+				padding-left: 28px
+				position: relative
+				margin: 0 0 6px
+				color: #666
+				font-size: 15px
+				font-weight: 400
+				line-height: 1.5em
+				&:before
+					counter-increment: aboutPageList
+					content: counter(aboutPageList) ". "
+					position: absolute
+					left: 0
+					top: 0
+					width: 28px
